--- a/www.abc.net.au/index.html
+++ b/www.abc.net.au/index.html
@@ -16,7 +16,7 @@
 	<link rel="alternate" data-abc-platform="mobile" media="only screen and (max-width: 640px)" href="http://mobile.abc.net.au/"
 	/>
 	<link rel="alternate" type="application/rss+xml" href="http://www.abc.net.au/homepage/rss.xml" />
-	<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon-precomposed" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-57x57.png"
 	/>
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-72x72.png"
@@ -49,7 +49,7 @@
 		</div>
 		<ul role="presentation">
 			<li class="news">
-				<a href="http://www.abc.net.au/news/">News</a>
+				<a href="instantsearch.html">News</a>
 			</li>
 			<li class="iview">
 				<a href="http://iview.abc.net.au/">iview</a>
