--- a/www.abc.net.au/instantsearch.html
+++ b/www.abc.net.au/instantsearch.html
@@ -112,7 +112,7 @@
     </div>
 
     <!-- TEMPLATES -->
-    <script type="text/html" id="hit-template">
+    <script type="text/html" id="article-template">
     <div class="hit">
         <div class="hit-card col-xs-12">
             <div class ="hit-card-content">
