--- a/www.abc.net.au/index.html
+++ b/www.abc.net.au/index.html
@@ -25,6 +25,7 @@
 	/>
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-144x144.png"
 	/>
+	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" media="all" href="homepage/2013/styles/combined.min.css%3F20171228163719.css" />
 	<link rel="stylesheet" type="text/css" media="all" href="autocomplete.css" />
 	<link rel="stylesheet" type="text/css" media="all" href="override.css" />
