--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	/>
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" media="all" href="homepage/2013/styles/combined.min.css%3F20171228163719.css" />
-	<link rel="stylesheet" type="text/css" media="all" href="override.css" />
-	<link rel="stylesheet" type="text/css" media="all" href="autocomplete.css" />
+	<link rel="stylesheet" type="text/css" media="all" href="assets/style/override.css" />
+	<link rel="stylesheet" type="text/css" media="all" href="assets/style/autocomplete.css" />
 
 
 
@@ -1077,7 +1077,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.2.0/dist/instantsearch.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/algoliasearch@3/dist/algoliasearchLite.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
-	<script src="algolia-autocomplete.js"></script>
+	<script src="assets/js/algolia-autocomplete.js"></script>
 	<!-- /SCRIPTS -->
 </body>
 
