Add search widgets

--- a/index.html
+++ b/index.html
@@ -8,23 +8,17 @@
 	<title>ABC - Australian Broadcasting Corporation</title>
 	<meta name="dcterms.title" content="ABC - Australian Broadcasting Corporation" />
 	<meta name="description" content="Australia's leading source of information and entertainment" />
-	<meta name="keywords" content="ABC, Australia, TV, Television, Radio, Internet, arts, business, economy, computers, education, entertainment, politics, health, lifestyle, media, news, sport, sports, recreation, regional, science, environment, society, culture, Radio National, Triple J, NewsRadio, Radio Australia, ABC Classic FM, News, Australia, Digital, Broadband, ABC2, kids, children"
-	/>
+	<meta name="keywords" content="ABC, Australia, TV, Television, Radio, Internet, arts, business, economy, computers, education, entertainment, politics, health, lifestyle, media, news, sport, sports, recreation, regional, science, environment, society, culture, Radio National, Triple J, NewsRadio, Radio Australia, ABC Classic FM, News, Australia, Digital, Broadband, ABC2, kids, children"/>
 	<meta name="publisher" content="Australian Broadcasting Corporation" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.3/dist/instantsearch.min.css">
 	<link rel="canonical" data-abc-platform="standard" href="index.html" />
-	<link rel="alternate" data-abc-platform="mobile" media="only screen and (max-width: 640px)" href="http://mobile.abc.net.au/"
-	/>
+	<link rel="alternate" data-abc-platform="mobile" media="only screen and (max-width: 640px)" href="http://mobile.abc.net.au/"/>
 	<link rel="alternate" type="application/rss+xml" href="http://www.abc.net.au/homepage/rss.xml" />
-	<link rel="icon" href="favicon.ico" type="image/x-icon" />
-	<link rel="apple-touch-icon-precomposed" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-57x57.png"
-	/>
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-72x72.png"
-	/>
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-114x114.png"
-	/>
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-144x144.png"
-	/>
+	<link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
+	<link rel="apple-touch-icon-precomposed" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-57x57.png"/>
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-72x72.png"/>
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-114x114.png"/>
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.abc.net.au/homepage/2013/styles/img/apple-touch-icon-144x144.png"/>
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" media="all" href="homepage/2013/styles/combined.min.css%3F20171228163719.css" />
 	<link rel="stylesheet" type="text/css" media="all" href="assets/style/override.css" />
