Style refinement lists

--- a/instantsearch.html
+++ b/instantsearch.html
@@ -99,7 +99,7 @@
                         </div>
                     </div>
 
-                    <p class="article-synopsis">{{{synopsis}}}</p>
+                    <p class="article-synopsis">{{{_snippetResult.synopsis.value}}}</p>
                 </div>
             </div>
         </div>
