Add link styling

--- a/instantsearch.html
+++ b/instantsearch.html
@@ -39,7 +39,7 @@
         </div>
         <ul role="presentation">
             <li class="news">
-                <a href="http://www.abc.net.au/news/">News</a>
+                <a class="active" href="instantsearch.html">News</a>
             </li>
             <li class="iview">
                 <a href="http://iview.abc.net.au/">iview</a>
