Basic language functionality

--- a/instantsearch.html
+++ b/instantsearch.html
@@ -36,6 +36,22 @@
                     <img id="nav-logo" src="homepage/2013/styles/img/logo-abc@2x.png" alt="ABC logo" />
                 </li>
             </a>
+            <li id="lang-selector">
+                    <span id="lang">lang:</span>
+                    <span >
+                        <div>
+                            <div class="ais-root ais-sort-by-selector">
+                                <div class="ais-body">
+                                    <select id="language-select" class="ais-sort-by-selector">
+                                    <option class="ais-sort-by-selector--item" selected value="en">en</option>
+                                    <option class="ais-sort-by-selector--item" value="in">in</option>
+                                    <option class="ais-sort-by-selector--item" value="zh">zh</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </span>
+            </li>
         </div>
         <ul role="presentation">
             <li class="news">
