Beginning index switch

--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
 				</div>
 			</li>
 		</div>
-		<ul role="presentation">
-			<li class="news">
-				<a href="instantsearch.html">News</a>
-			</li>
-			<li class="iview">
-				<a href="http://iview.abc.net.au/">iview</a>
-			</li>
-			<li class="tv">
-				<a href="http://www.abc.net.au/tv/">TV</a>
-			</li>
-			<li class="radio">
-				<a href="https://radio.abc.net.au/">Radio</a>
-			</li>
-		</ul>
+		<ul id="indices-ul" role="presentation">
+				<li class="news">
+					<a href="instantsearch.html">News</a>
+				</li>
+				<li class="iview">
+					<a href="instantsearch.html">iview</a>
+				</li>
+				<li class="tv">
+					<a href="instantsearch.html">TV</a>
+				</li>
+				<li class="radio">
+					<a href="instantsearch.html">Radio</a>
+				</li>
+			</ul>
 	</div>
 
 	<div id="main-content">
@@ -1068,6 +1068,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/algoliasearch@3/dist/algoliasearchLite.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
 	<script src="assets/js/algolia-autocomplete.js"></script>
+	<script src="assets/js/curr-index.js"></script>
 	<!-- /SCRIPTS -->
 </body>
 
