--- a/instantsearch.html
+++ b/instantsearch.html
@@ -53,18 +53,18 @@
                 </span>
             </li>
         </div>
-        <ul role="presentation">
+        <ul id="indices-ul" role="presentation">
             <li class="news">
                 <a class="active" href="instantsearch.html">News</a>
             </li>
             <li class="iview">
-                <a href="http://iview.abc.net.au/">iview</a>
+                <a href="instantsearch.html">iview</a>
             </li>
             <li class="tv">
-                <a href="http://www.abc.net.au/tv/">TV</a>
+                <a href="instantsearch.html">TV</a>
             </li>
             <li class="radio">
-                <a href="https://radio.abc.net.au/">Radio</a>
+                <a href="instantsearch.html">Radio</a>
             </li>
         </ul>
 
@@ -131,6 +131,7 @@
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@3/dist/algoliasearchLite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
     <script src="/assets/js/banner-widget.js"></script>
+    <script src="assets/js/curr-index.js"></script>
     <script src="/assets/js/algolia-search.js"></script>
     <!-- /SCRIPTS -->
 </body>
