Revert to original page content

--- a/instantsearch.html
+++ b/instantsearch.html
@@ -55,16 +55,16 @@
         </div>
         <ul id="indices-ul" role="presentation">
             <li class="news">
-                <a class="active" href="instantsearch.html">News</a>
+                <a class="active" href="news-instantsearch.html">News</a>
             </li>
             <li class="iview">
-                <a href="instantsearch.html">iview</a>
+                <a href="iview-instantsearch.html">iview</a>
             </li>
             <li class="tv">
-                <a href="instantsearch.html">TV</a>
+                <a href="tv-instantsearch.html">TV</a>
             </li>
             <li class="radio">
-                <a href="instantsearch.html">Radio</a>
+                <a href="radio-instantsearch.html">Radio</a>
             </li>
         </ul>
 
