--- a/instantsearch.html
+++ b/instantsearch.html
@@ -55,16 +55,16 @@
         </div>
         <ul id="indices-ul" role="presentation">
             <li class="news">
-                <a class="active" href="news-instantsearch.html">News</a>
+                <a class="active" href="#">News</a>
             </li>
             <li class="iview">
-                <a href="iview-instantsearch.html">iview</a>
+                <a href="#">iview</a>
             </li>
             <li class="tv">
-                <a href="tv-instantsearch.html">TV</a>
+                <a href="#">TV</a>
             </li>
             <li class="radio">
-                <a href="radio-instantsearch.html">Radio</a>
+                <a href="#">Radio</a>
             </li>
         </ul>
 
@@ -131,7 +131,6 @@
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@3/dist/algoliasearchLite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
     <script src="/assets/js/banner-widget.js"></script>
-    <script src="assets/js/curr-index.js"></script>
     <script src="/assets/js/algolia-search.js"></script>
     <!-- /SCRIPTS -->
 </body>
